--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "tesla-remote-lambda",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
+  "engines": {
+    "node": "12.13.1",
+    "npm": "6.12.1"
+  },
   "main": "index.js",
   "dependencies": {
-    "teslajs": "^2.1.44"
+    "teslajs": "^4.7.4"
   },
   "devDependencies": {},
   "scripts": {
